# NinjaAssets

./: .gitignore  NinjaAssets_PRD_v1.0.md  README.md  drag_into_maya.py  install.bat  install.command  pyproject.toml
docs/: user-guide.md
ninja_assets/: __init__.py  config.py  constants.py
ninja_assets/cli/: init_gdrive.py  install.py  migrate.py
ninja_assets/core/: cache.py  changelog.py  exceptions.py  models.py  scene_meta.py  sidecar.py  thumbnail.py
ninja_assets/maya_integration/: commands.py  hotkeys.py  menu.py  plugin.py  reload.py  shelf.py
ninja_assets/maya_integration/ui/: __init__.py  flow_layout.py  main_window.py  preview_panel.py  products_tab.py  publish_dialog.py  qt_compat.py  save_version_dialog.py  scenefiles_tab.py  settings_dialog.py  setup_tab.py  style.py  thumbnail_widget.py  username_dialog.py
ninja_assets/maya_integration/utils/: export.py  maya_utils.py  thumbnail.py
ninja_assets/sync/: engine.py  resolver.py  scanner.py
tests/: conftest.py  test_cache.py  test_changelog.py  test_cli.py  test_commands.py  test_config.py  test_engine.py  test_install.py  test_maya_integration.py  test_models.py  test_reload.py  test_scanner.py  test_scene_meta.py  test_sidecar.py  test_thumbnail.py
