[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ninja-assets"
version = "0.1.0"
description = "GDrive-based asset management for Maya"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.scripts]
ninja-install = "ninja_assets.cli.install:main"
ninja-init-gdrive = "ninja_assets.cli.init_gdrive:main"
ninja-migrate = "ninja_assets.cli.migrate:main"

[tool.setuptools.packages.find]
include = ["ninja_assets*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py37"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
