[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ninja-assets"
version = "0.1.0"
description = "GDrive-based asset management for Maya"
requires-python = ">=3.7"
license = {text = "MIT"}

[project.scripts]
ninja-install = "ninja_assets.cli.install:main"
ninja-init-gdrive = "ninja_assets.cli.init_gdrive:main"
ninja-migrate = "ninja_assets.cli.migrate:main"

[tool.setuptools.packages.find]
include = ["ninja_assets*"]

[tool.setuptools.package-data]
ninja_assets = ["resources/*.png"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
thumbnail = [
    "trimesh",
    "pyrender",
    "Pillow",
    "PyOpenGL",
    "numpy",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint.per-file-ignores]
# trimesh/PIL are optional; imports intentionally follow pytest.importorskip()
"tests/test_thumbnail.py" = ["E402"]

[tool.mypy]
# Lowest version this mypy supports; runtime still targets 3.7 (Maya 2022+).
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# Maya and its Qt bindings are provided by the Maya runtime, not installed in
# the dev/CI environment; pyrender/trimesh ship without type stubs.
[[tool.mypy.overrides]]
module = [
    "maya.*",
    "PySide2.*",
    "PySide6.*",
    "shiboken2",
    "shiboken6",
    "pyrender.*",
    "trimesh.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
